--- a/sha7/package.json
+++ b/sha7/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "bootstrap": "^5.2.3",
     "next": "13.3.0",
     "react": "18.2.0",
